k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickstack-client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: client
  template:
    metadata:
      labels:
        component: client
    spec:
      containers:
        - name: client
          image: gulmohar/tickstack-client
          ports:
            - containerPort: 3899
