k8s/client-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tickstack-client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: client
  ports:
    - port: 3899
      targetPort: 3899
