k8s/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tickstack-ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /(.*)
            backend:
              serviceName: tickstack-client-cluster-ip-service
              servicePort: 3899
          - path: /api/(.*)
            backend:
              serviceName: tickstack-server-cluster-ip-service
              servicePort: 5656
